--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ header {
   border-bottom: 1px solid black;
   position: fixed;
   width: 100%;
+  background-color: white;
   background: rgba(255, 255, 255, 0);
   backdrop-filter: blur(6.1px);
   -webkit-backdrop-filter: blur(6.1px);
@@ -46,18 +47,67 @@ header {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  
 }
-nav ul {
+nav {
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  transform: translateX(100%);
+  background-color: #fffae9;
+  transition: ease .4s;
+}
+.hamburger {
+  width: 45px; 
+  height: 100%;
+  background-color: transparent;
+  border-color: transparent;
+}
+.hamburger span {
+  width: 100%;
+  height: 1px;
+  background-color: black;
+  position: relative;
+  transition: ease .4s;
+  display: block;
+}
+.hamburger span:nth-child(1) {
+  top: 0;
+}
+.hamburger span:nth-child(2) {
+  margin: 8px 0;
+}
+.hamburger span:nth-child(3) {
+  top: 0;
+}
+/* header --- hamburger active */
+nav.active {
+  transform: translateX(0);
+}
+.hamburger.active span:nth-child(1) {
+  top: 5px;
+  transform: rotate(45deg);
+}
+.hamburger.active span:nth-child(2) {
+  opacity: 0;
+}
+.hamburger.active span:nth-child(3) {
+  top: -13px;
+  transform: rotate(-45deg);
+}
+
+/* nav ul {
   margin: 0;
   padding: 0 8%;
   display: flex;
   justify-content: flex-end;
-}
-nav li {
+} */
+/* nav li {
   margin-left: 30px;
   list-style: none;
-}
+} */
 nav li a {
   color: black;
   font-size: 0.85rem;
