--- a/css/style.css
+++ b/css/style.css
@@ -34,11 +34,10 @@ p {
 
 /* header */
 header {
-  padding: 30px 0;
+  padding: 20px 0;
   border-bottom: 1px solid black;
   position: fixed;
   width: 100%;
-  background-color: white;
   background: rgba(255, 255, 255, 0);
   backdrop-filter: blur(6.1px);
   -webkit-backdrop-filter: blur(6.1px);
@@ -56,7 +55,8 @@ nav {
   width: 100%;
   height: 100vh;
   transform: translateX(100%);
-  background-color: #fffae9;
+  background-color: white;
+  
   transition: ease .4s;
 }
 .hamburger {
@@ -97,35 +97,24 @@ nav.active {
   top: -13px;
   transform: rotate(-45deg);
 }
-
-/* nav ul {
-  margin: 0;
-  padding: 0 8%;
-  display: flex;
-  justify-content: flex-end;
-} */
-/* nav li {
-  margin-left: 30px;
+nav ul {
+  padding: 150px 0;
+  text-align: center;
+}
+nav li {
   list-style: none;
-} */
-nav li a {
+  margin-bottom: 25px;
+  display: block; 
+}
+
+.nav-link {
   color: black;
-  font-size: 0.85rem;
+  font-size: 1.5rem; 
 }
-nav li a:hover { 
+
+.nav-link:hover { 
   font-style: italic;
-}
-.nav-link::after {
-  content: '';
-  height: 2px;
-  width: 0;
-  background-color: rgb(194, 5, 246);
-  display: block;
-  transition: all 0.3s ease-in-out;
-  pointer-events: none;
-}
-.nav-link:hover::after {
-  width: 100%;
+  color: rgb(194, 5, 246);
 }
 
 /* home */
@@ -223,17 +212,13 @@ main {
 .work-experience {
   margin-top: 40px;
 }
-
 h3 {
   margin-bottom: 0;
   color: #424242;
 }
-
 .work-title p {
   font-size: 0.8rem;
 }
-
-
 /* works */
 .work {
   border: 1px solid black;
@@ -242,11 +227,9 @@ h3 {
   text-align: center;
   margin-bottom: 20px;
 }
-
 .works-intro {
   text-align: center;
 }
-
 .work-img {
   width: 95%;
   height: auto;
@@ -265,11 +248,9 @@ h3 {
 .btn:hover {
   background-color: black;
   color: white;
-
 }
 .coffee-btn {
-  margin: 5px;
-  
+  margin: 5px; 
 }
 
 /* references */
@@ -286,7 +267,6 @@ h3 {
   height: 150px;
   border-radius: 50% ;
   margin-top: 40px;
- 
 }
 .bio-name {
   margin: 0;
@@ -295,34 +275,25 @@ h3 {
 .bio-title {
   font-size: 0.75rem;
   margin-top: 5px;
-  color: #424242;
-  
+  color: #424242; 
 }
-
-
 
 /* footer */
 footer {
   border-top: 1px solid black;
-
 }
-
 .footer-contact {
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
-
 .footer-contact a {
   color: black;
   margin-left: 10px;
 }
-
 .footer-contact a:hover {
   color: rgb(194, 5, 246);
 }
-
 .footer-img {
   width: 100%;
 }
@@ -339,31 +310,22 @@ footer {
   .skills-container li, .interests-container li {
     font-size: 1.2rem;
   }
-
   .title {
     font-size: 2.5rem;
     margin-top: 0;
   }
 
- 
-  nav li a {
-    font-size: 1.1rem;
-   
-  }
 
   /* home */
   .typewriter-text {
     font-size: 5rem;
   }
-
   .main-title {
     font-size: 1.5rem;
   }
-
   .main-desc {
     margin-top: 50px;
   }
-
   .main-img {
     width: 70%;
     height: auto;
@@ -372,8 +334,6 @@ footer {
 
 
   /* about */
-
-
   .about-container a, .interests-container a {
     font-size: 1.2rem;
   }
@@ -407,39 +367,78 @@ footer {
   }
 
   /* works */
-  
-
   .site-title {
     font-size: 1.2rem;
   }
-
   /* references */
   .bio-name  {
     font-size: 1.2rem;
   }
-  
 
 }
 
 @media (min-width: 1024px) {
-
+  /* header */
+  .header-inner {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0 8%;
+  }
+  nav {
+    position: static;
+    transform: initial;  
+    height: 44px;
+    background-color: transparent;
+  }
+  nav ul {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;   
+    padding: 0; 
+    margin-bottom: 0;
+    margin-top: 5px;
+  }
+  nav li {
+    margin-left: 30px;
+    margin-bottom: 0;
+  }
+  .hamburger {
+    display: none;
+  }
+  .nav-link {
+    font-size: 1rem;
+  }
+  .nav-link:hover { 
+    color: black;
+  }
+ .nav-link::after {
+    content: '';
+    height: 2px;
+    width: 0;
+    background-color: rgb(194, 5, 246);
+    display: block;
+    transition: all 0.3s ease-in-out;
+    pointer-events: none;
+  }
+  .nav-link:hover::after {
+    width: 100%;
+  } 
+  
+ 
   /* home */
   .text-container {
     display: flex;
     justify-content: space-between;
     margin-top: 0;
   }
-  
-
   .main-title-container {
     width: 60%;
     margin-top: auto;
   }
-
   .main-img-container {
     margin-top: auto;
   }
-
   .typewriter-text {
     font-size: 4rem;
   }
