--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ p {
   transform: translateY(80px);
   opacity: 0;
   transition: all 0.8s ease;
-  z-index: -1;
+  
 }
 .reveal.active {
   transform: translateY(0px);
@@ -53,6 +53,7 @@ header {
   background: rgba(255, 255, 255, 0);
   backdrop-filter: blur(6.1px);
   -webkit-backdrop-filter: blur(6.1px);
+  z-index: 1;
 }
 .header-inner {
   padding: 0 12%;
@@ -240,6 +241,15 @@ h3 {
 .work-title p {
   font-size: 0.8rem;
 }
+.company p{
+  margin: 0;
+ 
+  
+}
+.company {
+  margin-top: 18px;
+  
+}
 /* works */
 .work {
   border: 1px solid black;
@@ -375,9 +385,7 @@ footer {
     font-size: 1.2rem;
   }
 
-  .work-title p {
-    font-size: 1rem;
-  }
+ 
 
   .work-experience {
     margin-bottom: 70px;
@@ -459,6 +467,10 @@ footer {
    .typewriter-text {
     font-size: 5.5rem;
   }
+  .main-title { 
+    font-size: 1.5rem;
+   
+  }
   .main-img-container {
     margin-top: auto;
   }
@@ -519,6 +531,13 @@ footer {
 
   .main-img {
     width: 300px;
+  }
+  .typewriter-text {
+    font-size: 5rem;
+  }
+  .main-title { 
+    font-size: 2rem;
+    
   }
 
   /* about */
