--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ p {
 
 /* header */
 header {
-  padding: 20px 0;
+  padding: 30px 0;
   border-bottom: 1px solid black;
   position: fixed;
   width: 100%;
@@ -184,6 +184,7 @@ main {
 
 .main-desc {
   margin-top: 30px;
+  font-size: 20px;
 }
 .main-img {
   width: 100%;
@@ -338,7 +339,9 @@ footer {
 }
 /* media queries */
 @media (min-width: 768px) {
- 
+  header {
+    padding: 32px 0;
+  }
   p,
   .skills-container li, .interests-container li {
     font-size: 1.1rem;
@@ -465,7 +468,7 @@ footer {
     margin-top: auto;
   }
    .typewriter-text {
-    font-size: 5.5rem;
+    font-size: 4.5rem;
   }
   .main-title { 
     font-size: 1.5rem;
