--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ p {
 
 /* header */
 header {
-  padding: 30px 0;
+  padding: 20px 0;
   border-bottom: 1px solid black;
   position: fixed;
   width: 100%;
@@ -62,8 +62,8 @@ header {
   align-items: center;
 }
 .header-logo {
-  width: 40px;
-  height: 40px;
+  width: 2.5em;
+  height: 2.5em;
 }
 
 nav {
@@ -79,7 +79,7 @@ nav {
   
 }
 .hamburger {
-  width: 45px; 
+  width: 2.5em; 
   height: 100%;
   background-color: transparent;
   border-color: transparent;
@@ -140,6 +140,8 @@ nav li {
 main {
   padding: 14% 12%;
 }
+
+
 .text-container {
   text-align: center;
   width: 100%;
@@ -150,7 +152,7 @@ main {
 }
 .typewriter-text {
   font-family: 'BhuTuka Expanded One';
-  font-size: 7rem;
+  font-size: 3rem;
   letter-spacing: 4px;
   line-height: 1;
   margin-top: 0;
@@ -175,7 +177,7 @@ main {
   
 .main-title {
   font-family: 'BhuTuka Expanded One';
-  font-size: 2rem;
+  font-size: 1.5rem;
   line-height: 1;
   font-weight: bold;
   color: black;
@@ -353,6 +355,9 @@ footer {
 
 
   /* home */
+  main {
+    padding: 14% 12%;
+  }
   .main-desc {
     margin-top: 50px;
   }
