--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 
 * {
   font-family: 'Playfair Display';
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.5;
 }
 
@@ -46,7 +46,7 @@ p {
 
 /* header */
 header {
-  padding: 20px 0;
+  padding: 3% 0;
   border-bottom: 1px solid black;
   position: fixed;
   width: 100%;
@@ -62,8 +62,8 @@ header {
   align-items: center;
 }
 .header-logo {
-  width: 2.5em;
-  height: 2.5em;
+  width: 2em;
+  height: 2em;
 }
 
 nav {
@@ -117,18 +117,18 @@ nav.active {
   transform: rotate(-45deg);
 }
 nav ul {
-  padding: 250px 0;
+  padding: 40% 0;
   text-align: center;
 }
 nav li {
   list-style: none;
-  margin-bottom: 25px;
+  margin-bottom: 5%;
   display: block; 
 }
 
 .nav-link {
   color: black;
-  font-size: 1.5rem; 
+  font-size: 1.5em; 
 }
 
 .nav-link:hover { 
@@ -138,10 +138,8 @@ nav li {
 
 /* home */
 main {
-  padding: 14% 12%;
+  padding: 23% 10% 13% 10%;
 }
-
-
 .text-container {
   text-align: center;
   width: 100%;
@@ -152,7 +150,7 @@ main {
 }
 .typewriter-text {
   font-family: 'BhuTuka Expanded One';
-  font-size: 3rem;
+  font-size: 3.25em;
   letter-spacing: 4px;
   line-height: 1;
   margin-top: 0;
@@ -177,7 +175,7 @@ main {
   
 .main-title {
   font-family: 'BhuTuka Expanded One';
-  font-size: 1.5rem;
+  font-size: 1.1em;
   line-height: 1;
   font-weight: bold;
   color: black;
@@ -185,13 +183,12 @@ main {
 }
 
 .main-desc {
-  margin-top: 30px;
-  font-size: 20px;
+  margin-top: 15%;
 }
 .main-img {
-  width: 100%;
+  width: 80%;
   height: auto;
-  margin-top: 50px;
+  margin-top: 5%;
 }
 
 
@@ -199,6 +196,7 @@ main {
 /* about */
 .sub-title {
   display: block;
+  font-size: 1.25em;
   text-decoration: underline 5px solid rgb(194, 5, 246);
 }
 .about-container a, .interests-container a {
@@ -208,6 +206,9 @@ main {
 .about-container a:hover, .interests-container a:hover {
   color: rgb(194, 5, 246);
   border-bottom: 1px solid rgb(194, 5, 246)
+}
+.skills-container ul {
+  padding-left: 8%;
 }
 .skill-container li, .interests-container li {
   list-style-type: disc;
@@ -231,26 +232,25 @@ main {
 .icon {
   width: 30px;
   height: 30px;
-  margin-left: 10px;
+  margin-left: 3%;
 }
 
 .work-experience {
-  margin-top: 40px;
+  margin-top: 15%;
 }
 h3 {
   margin-bottom: 0;
   color: #424242;
 }
 .work-title p {
-  font-size: 0.8rem;
+  font-size: 0.85em;
 }
+
 .company p{
-  margin: 0;
- 
-  
+  margin: 0; 
 }
 .company {
-  margin-top: 18px;
+  margin-top: 3%;
   
 }
 /* works */
@@ -259,7 +259,7 @@ h3 {
   border-radius: 5px;
   padding: 5% 3%;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 4%;
 }
 .works-intro {
   text-align: center;
@@ -267,6 +267,9 @@ h3 {
 .work-img {
   width: 95%;
   height: auto;
+}
+.site-title {
+  font-size: 1.2em;;
 }
 
 .btn {
@@ -304,15 +307,16 @@ h3 {
   width: 150px;
   height: 150px;
   border-radius: 50% ;
-  margin-top: 40px;
+  margin-top: 8%;
 }
 .bio-name {
+  font-size: 1.1em;
   margin: 0;
   color: #424242;
 }
 .bio-title {
-  font-size: 0.75rem;
-  margin-top: 5px;
+  font-size: 0.85em;
+  margin-top: 0;
   color: #424242; 
 }
 
@@ -342,11 +346,11 @@ footer {
 /* media queries */
 @media (min-width: 768px) {
   header {
-    padding: 32px 0;
+    padding: 3% 0;
   }
   p,
   .skills-container li, .interests-container li {
-    font-size: 1.1rem;
+    font-size: 1.1em;
   }
   .title {
     font-size: 2.5rem;
@@ -358,11 +362,17 @@ footer {
   main {
     padding: 14% 12%;
   }
+  .typewriter-text {
+    font-size: 5em;
+  }
+  .main-title {
+    font-size: 1.75em;
+  }
   .main-desc {
-    margin-top: 50px;
+    margin-top: 10%;
   }
   .main-img {
-    width: 70%;
+    width: 60%;
     height: auto;
     margin-left: auto;
   }
@@ -370,48 +380,54 @@ footer {
 
   /* about */
   .about-container a, .interests-container a {
-    font-size: 1.1rem;
+    font-size: 1.1em;
   }
 
   h2 {
-    font-size: 1.5rem;
+    font-size: 1.5em;
   }
 
   .skills-icon {
     display: flex;
     justify-content: start;
-    margin-top: 30px;
+    margin-top: 5%;
   }
 
   .icon {
     width: 40px;
     height: 40px;
-    margin-left: 20px;
   }
 
   .work-title h3 {
-    font-size: 1.2rem;
+    font-size: 1.2em;
+  }
+  .company {
+    margin-top: 0;
   }
 
- 
-
   .work-experience {
-    margin-bottom: 70px;
+    margin-top: 8%;
   }
 
   /* works */
   .site-title {
-    font-size: 1.2rem;
+    font-size: 1.25em;
   }
   /* references */
   .bio-name  {
-    font-size: 1.2rem;
+    font-size: 1.25em;
+  }
+  .bio-img {
+    margin-top: 5%;
   }
 
 }
 
 @media (min-width: 1024px) {
   /* header */
+  header {
+    padding: 2% 0;
+}
   .header-inner {
     padding: 0 12%;
   }
@@ -423,7 +439,7 @@ footer {
   nav {
     position: static;
     transform: initial;  
-    height: 44px;
+    height: 28px;
     background-color: transparent;
   }
   nav ul {
@@ -431,18 +447,17 @@ footer {
     justify-content: flex-end;
     align-items: center;   
     padding: 0; 
-    margin-bottom: 0;
-    margin-top: 5px;
+    margin: 0;
   }
   nav li {
-    margin-left: 30px;
+    margin-left: 4%;
     margin-bottom: 0;
   }
   .hamburger {
     display: none;
   }
   .nav-link {
-    font-size: 1rem;
+    font-size: 1.1em;
   }
   .nav-link:hover { 
     color: black;
@@ -462,6 +477,9 @@ footer {
   
  
   /* home */
+  main {
+    padding: 16% 12%;
+  }
   .text-container {
     text-align: left;
     display: flex;
@@ -473,10 +491,10 @@ footer {
     margin-top: auto;
   }
    .typewriter-text {
-    font-size: 4.5rem;
+    font-size: 4.5em;
   }
   .main-title { 
-    font-size: 1.5rem;
+    font-size: 1.5em;
    
   }
   .main-img-container {
@@ -492,7 +510,7 @@ footer {
   }
   /* about */
   .about-container a, .interests-container a {
-    font-size: 1rem;
+    font-size: 1.1em;
 }
   /* works */
   .works-container {
@@ -502,7 +520,7 @@ footer {
     grid-column-gap: 20px;
   }
   p, .skills-container li, .interests-container li {
-    font-size: 1rem;
+    font-size: 1.1em;
 }
 
 
@@ -520,9 +538,7 @@ footer {
   }
   .bio {
     width: 70%;
-    text-align: left;
-
-    
+    text-align: left; 
   }
 }
 
@@ -531,20 +547,20 @@ footer {
   /* home */
 
   .main-title-container {
-    width: 50%;
+    width: 60%;
 }
   .main-desc {
-    margin-right: 70px;
+    margin-right: 50px;
   }
 
   .main-img {
     width: 300px;
   }
   .typewriter-text {
-    font-size: 5rem;
+    font-size: 6em;
   }
   .main-title { 
-    font-size: 2rem;
+    font-size: 1.75em;
     
   }
 
@@ -554,6 +570,16 @@ footer {
   .work-container, .interests-container {
     padding: 5% 18%;
   }
+  .work-title p {
+    font-size: 0.9em;
+}
+.sub-title {
+  font-size: 1.5em;
+  
+}
+.work-experience {
+  margin-top: 12%;
+}
 
   /* works */
   .works-intro {
@@ -572,3 +598,5 @@ footer {
 
 
 }
+
+
