--- a/css/style.css
+++ b/css/style.css
@@ -79,10 +79,11 @@ nav {
   
 }
 .hamburger {
-  width: 2.5em; 
+  width: 2em; 
   height: 100%;
   background-color: transparent;
   border-color: transparent;
+  padding: 0;
 }
 .hamburger span {
   width: 100%;
