--- a/css/style.css
+++ b/css/style.css
@@ -256,11 +256,12 @@ main {
 .slide-container{
   max-width: 1120px;
   width: 100%;
-  padding: 0 0 40px 0;
+  padding: 5% 0 10% 0;
 }
 .slide-content{
   border-radius: 25px;
   width: 100%;
+  
 }
 .card{
   border-radius: 25px;
@@ -637,6 +638,25 @@ footer {
   .main-desc {
     margin-right: 20px;
   }
+  .slide-content {
+    margin-top: 8%;
+  }
+ 
+  .swiper-slide {
+    display: flex;
+    justify-content: center;
+    padding: 5em 0;
+  }
+  .image-content {
+    width: 50%;
+    padding-left: 2em;
+  }
+  .card-content {
+    width: 40%;
+    padding-right: 2em;
+  }
+
+
   /* about */
   .about-container a, .interests-container a {
     font-size: 1.1em;
