--- a/css/style.css
+++ b/css/style.css
@@ -475,6 +475,14 @@ h3 {
 /* footer */
 footer {
   border-top: 1px solid black;
+  background-color: black;
+}
+.footer-container {
+  padding: 2em 1em;
+}
+.footer-container p {
+  color: white;
+
 }
 .footer-contact {
   display: flex;
@@ -482,15 +490,21 @@ footer {
   align-items: center;
 }
 .footer-contact a {
-  color: black;
+  color: white;
   margin-left: 10px;
 }
 .footer-contact a:hover {
   color: rgb(194, 5, 246);
 }
-.footer-img {
-  width: 100%;
+.footer-icon {
+  text-align: center;
 }
+.footer-icon img {
+  width: 25px;
+  height: 25px;
+  margin: 0 5px;
+}
+
 .copy-right {
   text-align: center;
   font-size: 0.8rem;
@@ -512,7 +526,7 @@ footer {
 
   /* home */
   main {
-    padding: 14% 12%;
+    padding: 14% 12% 5% 12%;
   }
   .typewriter-text {
     font-size: 5em;
@@ -642,7 +656,7 @@ footer {
  
   /* home */
   main {
-    padding: 16% 12%;
+    padding: 16% 12% 8% 12%;
   }
   .text-container {
     text-align: left;
@@ -762,6 +776,9 @@ footer {
   }
   .swiper-slide {
     padding: 6em 0;
+}
+.footer-container {
+  padding: 3em 1em;
 }
 
   /* about */
