--- a/css/style.css
+++ b/css/style.css
@@ -305,14 +305,6 @@ main {
   margin: 0 5px;
   width: 20px;
 }
-.work-btn {
-  display: flex;
-  justify-content: space-between;
-}
-.work-btn p {
-  margin-right: 5px;
-  margin-left: 5px;
-}
 
 .swiper-navBtn{
   color: black;
@@ -483,16 +475,26 @@ h3 {
 }
 .project-wrapper ul {
   padding-left: 1em;
+  padding-left: 0;
 }
 .project-container2 {
   background-color: black;
 }
 .project-container2 h2 {
   color: white;
+  font-size: 1.5em;
+  margin-bottom: 10%;
 }
 .improvement li {
   color: white;
+  list-style: none;
+  margin-bottom: 15px;
 }
+.improvement-w li {
+  list-style: none;
+  margin-bottom: 15px;
+}
+
 
 
 
@@ -641,6 +643,32 @@ footer {
   .site-title {
     font-size: 1.25em;
   }
+  /* project */
+  .project-wrapper {
+    padding: 5% 10% 5% 10%;
+  }
+  .site-link {
+    display: flex;
+    justify-content: center;
+    
+  }
+  .site-link a {
+    margin: 0 5px;
+  }
+ .improvement {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+ }
+ .improvement-w {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+ }
+ .project1-img {
+  width: 250px;
+ }
+ 
   /* references */
   .bio-name  {
     font-size: 1.25em;
@@ -782,7 +810,26 @@ footer {
   /* project */
   .project-container {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 8%;
   }
+  .project-wrapper {
+    padding: 5% 12% 8% 12%;
+  }
+  .improvement li {
+    margin-bottom: 30px;
+  }
+  .improvement-w li {
+    margin-bottom: 30px;
+  }
+  .work-img {
+    width: 400px;
+  }
+  .project1-img {
+    width: 350px;
+  }
+ 
  
 
 
@@ -857,6 +904,30 @@ footer {
   .works-intro {
     padding: 0 12%;
   }
+  /* project */
+  .project-container {
+    justify-content: center;
+  }
+  .project-img, .project-text {
+    padding: 0 3%;
+  }
+  .work-img {
+    width: 500px;
+  }
+  .project1-img {
+    width: 400px;
+  }
+  .project-wrapper {
+    padding: 5% 15% 8% 15%;
+  }
+  .improvement {
+    justify-content: center;
+    
+  }
+  .improvement-w {
+    justify-content: center;
+  }
+ 
   
   /* references */
   .bio-title  {
